2007-08-22  Werner Koch  <wk@g10code.com>

	* rndw32.c, rndunix.c: Switched to LGPL.

2007-05-30  Werner Koch  <wk@g10code.com>

	* camellia.h, camellia.c: Replace by new LGPL version and adjusted
	camellia.h.

2007-05-09  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (_gcry_ac_io_init_va, _gcry_ac_io_write, _gcry_ac_io_read):
	Adjust users of gcry_ac_io_t because union is not anonymous
	anymore.

2007-05-02  Werner Koch  <wk@g10code.com>

	* camellia-glue.c (camellia_setkey, camellia_encrypt)
	(camellia_decrypt): Recalculated used stack size in called
	functions.
	* camellia.h: Redefine external symbols.

2007-05-02  David Shaw  <dshaw@jabberwocky.com>

	* Makefile.am, cipher.c: Add Camellia.

	* camellia-glue.c: New.  The necessary glue to interface libgcrypt
	to the stock NTT Camellia distribution.

	* camellia.h, camellia.c: The stock NTT Camellia distribution
	(GPL).

2007-04-30  David Shaw  <dshaw@jabberwocky.com>

	* cipher.c: Use #if instead of #ifdef as configure defines the
	USE_cipher defines as 0 for disabled.

2007-04-30  Werner Koch  <wk@g10code.com>

	* rndegd.c (_gcry_rndegd_set_socket_name): New.

2007-04-30  Marcus Brinkmann  <marcus@g10code.de>

	* ecc.c (ec2os): Fix relocation of short numbers.

	* ecc.c (generate_key): Do not allocate D, which will be allocated
	by GEN_K.  Remove G.  Fix test if g_x, g_y resp. q_x, q_y are
	requested.
	(_gcry_ecc_generate): Release unneeded members of SK.
	* pubkey.c (sexp_to_key): Release NAME.

2007-04-28  Marcus Brinkmann  <marcus@g10code.de>

	* ac.c (gcry_ac_mpi): Remove member NAME_PROVIDED.
	(ac_data_mpi_copy, _gcry_ac_data_set, _gcry_ac_data_get_name)
	(_gcry_ac_data_get_index, ac_data_construct): Adjust handling of
	NAME accordingly.

2007-04-20  Werner Koch  <wk@g10code.com>

	* ecc.c (domain_parms): Add standard brainpool curves.

2007-04-18  Werner Koch  <wk@g10code.com>

	* ecc.c (generate_curve): Implement alias mechanism.

	* pubkey.c (sexp_elements_extract_ecc): New.