@@ -1,3 +1,8 @@
+2007-08-23  Werner Koch  <wk@g10code.com>
+
+	* random.c (pool_filled_counter): New.
+	(add_randomness): Use it.
+
 2007-08-22  Werner Koch  <wk@g10code.com>
 
 	* rndw32.c, rndunix.c: Switched to LGPL.
